# defacc

./: .env.example  .gitignore  QUICKSTART.md  README.md  architecture.mmd  demo.py  main.py  pyproject.toml  requirements.txt  settings.py
guardian/: __init__.py  clang_utils.py  compiler.py  dependency_graph.py  dspy_modules.py  llm.py  pipeline.py  project_runner.py  project_scanner.py  retriever.py  rule_analyzer.py
guardian/.claude/: settings.local.json
guardian/data/: __init__.py  rule_hints.json
guardian/evals/: baseline_comparison.py  c_to_rust.py
guardian/tests/: test_paper_examples.py
irene/: __init__.py  clang_utils.py  compiler.py  demo.py  dependency_graph.py  dspy_modules.py  main.py  pipeline.py  project_runner.py  project_scanner.py  reporting.py  retriever.py  rule_analyzer.py  workspace.py
irene/evals/: c_to_rust.py
irene/tests/: __init__.py  test_paper_examples.py
scripts/: generate_comparison_report.py  run_baseline_comparison.sh
src/defacc/: main.py
src/defacc/evals/: c_to_rust.py
src/defacc/irene/: __init__.py  pipeline.py  rule_analyzer.py
src/defacc/irene/.claude/: settings.local.json
src/defacc/irene/corpus/: examples.json
src/defacc/irene/evals/: c_to_rust.py
